// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PaygPricingSection > Recon row > matches snapshot in ar 1`] = `
<tr
  class="border-b last:border-b-0"
  data-testid="recon-payg-row"
>
  <td
    class="text-start text-sm p-4 font-medium"
  >
    <span
      class="inline-flex items-center gap-1.5"
    >
      تشغيل فحص Recon
      <button
        aria-label="تفاصيل فوترة Recon"
        class="text-muted-foreground hover:text-foreground transition-colors duration-150"
        data-state="closed"
        data-testid="recon-payg-tooltip-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </span>
  </td>
  <td
    class="text-end text-sm p-4 tabular-nums text-muted-foreground"
    data-testid="recon-payg-credits"
  >
    5000
  </td>
  <td
    class="text-end text-sm p-4 text-muted-foreground hidden sm:table-cell"
  >
    <a
      class="hover:text-foreground transition-colors duration-150"
      href="/docs/recon/quotas"
    >
      لكل فحص
    </a>
  </td>
</tr>
`;

exports[`PaygPricingSection > Recon row > matches snapshot in en 1`] = `
<tr
  class="border-b last:border-b-0"
  data-testid="recon-payg-row"
>
  <td
    class="text-start text-sm p-4 font-medium"
  >
    <span
      class="inline-flex items-center gap-1.5"
    >
      Recon scan run
      <button
        aria-label="Recon billing details"
        class="text-muted-foreground hover:text-foreground transition-colors duration-150"
        data-state="closed"
        data-testid="recon-payg-tooltip-trigger"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </span>
  </td>
  <td
    class="text-end text-sm p-4 tabular-nums text-muted-foreground"
    data-testid="recon-payg-credits"
  >
    5000
  </td>
  <td
    class="text-end text-sm p-4 text-muted-foreground hidden sm:table-cell"
  >
    <a
      class="hover:text-foreground transition-colors duration-150"
      href="/docs/recon/quotas"
    >
      Per scan
    </a>
  </td>
</tr>
`;
